@@ -1,6 +1,7 @@
 === ongoing (0.2.X - to be released as 0.3) ===
 
 - Bugfix: Home view crashes when account is empty
+- Bugfix: Fixed Unicode bug in `Transaction.get_description`
 
 === 0.2 ===
 
